# blueos-timelapse-controller

./: .gitignore  Dockerfile  LICENSE  README.md  camera_tilt_control.md  docker-compose.yml  entrypoint.sh
.github/workflows/: deploy.yml
backend/: pyproject.toml
backend/app/: __init__.py  capture.py  config_env.py  disk_util.py  main.py  mavlink_control.py  models.py  schedule_calc.py  scheduler_service.py  storage.py  timeutil.py
backend/tests/: test_delete_guard.py  test_disk_guard.py  test_models.py  test_schedule_calc.py  test_state_restore.py
ci/: deploy-blueos-extension.example.yml
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: register_service
frontend/src/: App.vue  api.ts  style.css
scripts/: export-image-tar.sh
