[project]
name = "timelapse-controller-backend"
version = "1.0.0"
description = "BlueOS Timelapse Controller extension backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "pymavlink>=2.4.41",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "httpx>=0.26.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
